# dtn-bpsec-cose

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  bpsec-default-sc.cddl  bpsec.cddl  bpv7.cddl  cborerrors.txt  cddlerrors.txt  combined.cddl  draft-ietf-dtn-bpsec-cose.html  draft-ietf-dtn-bpsec-cose.txt  draft-sipos-dtn-bpsec-cose.html  draft-sipos-dtn-bpsec-cose.txt  extracted.cddl  misspelling.txt
.github/workflows/: codeql.yml  examples.yml  rfc-check.yml
examples/: example_encrypt.py  example_encrypt0.py  example_mac.py  example_mac0.py  example_sign.py  example_sign1.py
spec/: CMakeLists.txt  cddl_combine.sh  cddl_verify.sh  check_cbor.sh  dictionary.txt  draft-ietf-dtn-bpsec-cose.xml  draft-sipos-dtn-bpsec-cose.xml  example_encrypt.py  example_mac.py  spellcheck.xsl  split_artwork.py
src/: pyproject.toml  setup.py
src/bpsec_cose/: bp.py  bpsec.py  example_encrypt0.py  example_encrypt_kek.py  example_encrypt_rsa.py  example_mac0.py  example_sign1_rsa.py  util.py
src/bpsec_cose/pki/: check.sh  run.py
src/bpsec_cose/pki/data/ca/: cert.pem
src/bpsec_cose/pki/data/nodes/dst/ssl/certs/: node-encrypt-ecc.pem  node-encrypt-rsa.pem  node-encrypt.pem
src/bpsec_cose/pki/data/nodes/dst/ssl/private/: node-encrypt-ecc.pem  node-encrypt-rsa.pem  node-encrypt.pem
src/bpsec_cose/pki/data/nodes/src/ssl/certs/: node-sign-ecc.pem  node-sign-rsa.pem  node-sign.pem
src/bpsec_cose/pki/data/nodes/src/ssl/private/: node-sign-ecc.pem  node-sign-ml.pem  node-sign-rsa.pem  node-sign.pem
src/bpsec_cose/test/: base.py  test_bpsec.py  test_encrypt0.py  test_encrypt0_cek.py  test_encrypt_ecdh_hkdf.py  test_encrypt_ecdh_kek.py  test_encrypt_kdk.py  test_encrypt_kek.py  test_encrypt_rsa.py  test_mac0.py  test_sign1_ecdsa.py  test_sign1_eddsa.py  test_sign1_mldsa.py  test_sign1_rsa.py
src/pki/: run.py
src/pki/data/nodes/src/ssl/certs/: node-sign.pem
