[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ietf-dtn-bpsec-cose-demo"
version = "0.0.0"
authors = [
  { name="Brian Sipos", email="brian.sipos+ietf@gmail.com" },
]
description = "Examples of COSE/BPSEC operations"
license = { text="LGPL-3" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "asn1 ~=2.7",
  "cbor2 >=5.6",
  "crcmod ~=1.7",
  "pycose @git+https://github.com/BrianSipos/pycose.git@sipos-combined-patches",
  "cryptography >=41.0",
  "six",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
]
pylint = [
  "pylint",
  "pylint_junit",
]
flake8 = [
  "flake8",
  "flake8_pyproject",
  "flake8_formatter_junit_xml",
]
ty = [
  "ty",
]

[tool.pytest.ini_options]
testpaths="bpsec_cose/test"
log_cli="True"
log_cli_level="info"

[tool.pylint.MAIN]
load-plugins="pylint_junit"
suggestion-mode="no"
[tool.pylint.FORMAT]
max-line-length=160
[tool.pylint.DESIGN]
min-public-methods=1

[tool.flake8]
max-line-length=160

[project.urls]
"Homepage" = "https://github.com/BrianSipos/dtn-bpsec-cose"
"Bug Tracker" = "https://github.com/BrianSipos/dtn-bpsec-cose/issues"
